force-app/main/default/objects/Provincias_Municipios__mdt/Provincias_Municipios__mdt.object-meta.xml
<CustomObject>
    <label>Provincia - Municipio</label>
    <pluralLabel>Provincias - Municipios</pluralLabel>
</CustomObject>