force-app/main/default/objects/Provincias_Municipios__mdt/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <label>Provincia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>