force-app/main/default/objects/Provincias_Municipios__mdt/listViews/Pais_Pronvincias_Municipios.listView-meta.xml
<ListView>
    <fullName>Pais_Pronvincias_Municipios</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Pais__c</columns>
    <columns>Provincia__c</columns>
    <columns>Municipio__c</columns>
    <filterScope>Everything</filterScope>
    <label>Pais_Pronvincias_Municipios</label>
</ListView>